# fil_rouge

./: .gitignore  CMakeLists.txt  Hero.cpp  Hero.h  README.md  UML.md  imgui.ini  log.txt  main.cpp
doc/: Doxyfile
doc/html/: _backpack_8cpp.html  _backpack_8cpp__incl.map  _backpack_8cpp__incl.md5  _backpack_8cpp_source.html  _backpack_8h.html  _backpack_8h.js  _backpack_8h__dep__incl.map  _backpack_8h__dep__incl.md5  _backpack_8h__incl.map  _backpack_8h__incl.md5  _backpack_8h_source.html  _class_impl_8h.html  _class_impl_8h__dep__incl.map  _class_impl_8h__dep__incl.md5  _class_impl_8h__incl.map  _class_impl_8h__incl.md5  _class_impl_8h_source.html  _dialog_box_8cpp.html  _dialog_box_8cpp__incl.map  _dialog_box_8cpp__incl.md5  _dialog_box_8h.html  _dialog_box_8h.js  _dialog_box_8h__dep__incl.map  _dialog_box_8h__dep__incl.md5  _dialog_box_8h__incl.map  _dialog_box_8h__incl.md5  _dialog_box_8h_source.html  _entity_8h.html  _entity_8h__dep__incl.map  _entity_8h__dep__incl.md5  _entity_8h__incl.map  _entity_8h__incl.md5  _entity_8h_source.html  _game_8cpp.html  _game_8cpp.js  _game_8cpp__incl.map  _game_8cpp__incl.md5  _game_8cpp_source.html  _game_8h.html  _game_8h.js  (+546 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  (+49 more)
include/: Hero.h  Sword.h  Weapon.h
include/game/: DialogBox.h  Game.h  Interactable.h  TileMap.h
include/game/interactable/: Entity.h  Interactable.h  InteractableImpl.h  MusicEntity.h  MusicInteractable.h
include/hero/: Hero.h
include/hero/class/: ClassImpl.h  Rogue.h  Warrior.h  Wizard.h
include/hero/inventory/: Backpack.h
include/hero/object/: IObject.h  IObjectImpl.h  Potion.h  Shield.h
lib/: CMakeLists.txt
lib/sfml/: CMakeLists.txt
res/files/: default.txt  npcAfterItem.txt  npcBeforeItem.txt
src/: Hero.cpp  Sword.cpp  Weapon.cpp
src/game/: DialogBox.cpp  Game.cpp  Interactable.cpp
src/hero/: Hero.cpp
(+13 files in other folders)
